# aws-describe

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/: common.py  common_test.py  describe.py  find-by-tag.py  find-instance.py  get-secret.py  get-tags.py
